# Secure-Data-Encryption

./: pyproject.toml
src/secure_data_encryption/: __init__.py  main.py
