[project]
name = "secure-data-encryption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AAliKKhan", email = "muhammda014@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
secure-data-encryption = "secure_data_encryption:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
